--- a/main.css
+++ b/main.css
@@ -4,11 +4,15 @@
 
 body {
     font-family: "Open Sans", sans-serif;
-    background-color: #7FDBFF;
+    background-image: url("images/background.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+  
 }
 
 a {
-    color: black;
+    color: rgb(255, 255, 255);
 }
 
 main {
@@ -19,10 +23,12 @@ main {
 header {
     display: grid;
     grid-template-columns: 80% 20%;
+    color: white;
 }
 
 header h2 {
     margin: 0;
+    color: white;
 }
 
 header nav {
@@ -30,26 +36,31 @@ header nav {
     font-size: 0.9em;
     font-weight: bold;
     padding-top: 1em;
+    color: white;
 }
 
 article {
     margin-top: 0.5em;
+    color: white;
 }
 
 #map {
     width: 100%;
     height: 85vh;
     border: 1px solid gray;
+    color: white;
 }
 
 footer {
     font-family: "Roboto", sans-serif;
     font-size: 0.9em;
     margin-top: 0.5em;
+    color: white;
 }
 
 footer nav {
     display: inline-block;
+    color: white;
 }
 
 .aws-div-icon span{
