--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 
 body {
     font-family: "Open Sans", sans-serif;
-    background-image: url("images/background.png");
+    background-image: url("images/background.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -49,6 +49,13 @@ article {
 }
 
 #map {
+    width: 100%;
+    height: 85vh;
+    border: 1px solid gray;
+    color: white;
+}
+
+#superzoom {
     width: 100%;
     height: 85vh;
     border: 1px solid gray;
