--- a/main.css
+++ b/main.css
@@ -52,7 +52,7 @@ article {
     width: 100%;
     height: 85vh;
     border: 1px solid gray;
-    color: white;
+    color: rgb(7, 7, 7);
 }
 
 #superzoom {
@@ -72,21 +72,4 @@ footer {
 footer nav {
     display: inline-block;
     color: white;
-}
-
-.aws-div-icon span{
-    font-size: 1.25em;
-    font-weight: bold;
-    padding: 0.3em;
-    border: 1px solid silver;
-    text-shadow: 
-        -1px -1px 0 white,
-        -1px 1px 0 white,
-         1px -1px 0 white,
-         1px 1px 0 white,
-    
-    
-    
-
-
 }
